# pipe-operator

./: .coveragerc  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  claude.md  pipe_operator.py  pyproject.toml
.claude/: settings.json
.claude/commands/: test.md  type-check.md  verify.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: code_quality.yml  publish_package.yml  tests.yml  update-uv-lockfile.yml  update_deps.yml
.zed/: settings.json
pipe_operator/: __init__.py  pipe_operator.py  transformers.py  utils.py
pipe_operator/elixir_flow/: pipe.py
pipe_operator/elixir_like/: __init__.py  pipes.py  transformers.py  utils.py
pipe_operator/elixir_like/tests/: test_pipe_operator.py  test_pipes.py  test_transformers.py  test_utils.py
pipe_operator/python_flow/: __init__.py  asynchronous.py  base.py  classes.py  extras.py  factories.py  pipe.py  pipes.py  tests.py  threads.py  types.py  utils.py
pipe_operator/python_flow/pipes/: asynchronous.py  basics.py  threads.py
pipe_operator/python_flow/tests/: test_asynchronous.py  test_base.py  test_extras.py  test_pipe.py  test_pipes.py  test_threads.py
pipe_operator/python_like/: __init__.py  pipe.py  utils.py
pipe_operator/python_like/tests/: test_pipe.py  test_utils.py
pipe_operator/shared/: utils.py
pipe_operator/shared/tests/: test_utils.py
pipe_operator/tests/: test_pipe_operator.py  test_transformers.py  test_utils.py
tests/: test_pipe_operator.py
