[project]
name = "pipe_operator"
version = "2.1.0"
requires-python = ">=3.9"
description = "Elixir's pipe operator in Python"
dependencies = ["typing-extensions>=4.12.2"]
readme = "README.md"
authors = [{ name = "Jordan Kowal", email = "kowaljordan@gmail.com" }]
maintainers = [{ name = "Jordan Kowal", email = "kowaljordan@gmail.com" }]
keywords = ["pipe", "operator", "elixir"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
]

[project.urls]
Changelog = "https://github.com/Jordan-Kowal/pipe-operator/blob/main/CHANGELOG.md"
Issues = "https://github.com/Jordan-Kowal/pipe-operator/issues"
"Release notes" = "https://github.com/Jordan-Kowal/pipe-operator/releases"
Source = "https://github.com/Jordan-Kowal/pipe-operator"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pipe_operator*"]
exclude = ["*.tests", "*.tests.*"]

[tool.setuptools.package-data]
pipe_operator = ["py.typed"]

# ------------------------------
# Dependencies
# ------------------------------
[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "coverage>=7.6.3",
    "flake8>=7.1.1",
    "mypy>=1.12.1",
    "pyrefly>=0.52.0",
    "pyright>=1.1.385",
    "ruff>=0.7.0",
    "twine>=5.1.1",
    "ty>=0.0.1a3",
]

# ------------------------------
# MYPY
# Strict by default (python_flow). Permissive override for elixir_flow.
# ------------------------------
[tool.mypy]
python_version = "3.9"
mypy_path = "."
strict = true
follow_imports = "silent"
ignore_missing_imports = false
show_column_numbers = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "pipe_operator.elixir_flow.*"
strict = false
strict_optional = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_any_generics = false
disallow_subclassing_any = false
warn_return_any = false
warn_unused_ignores = false
no_implicit_reexport = false
disable_error_code = ["attr-defined", "import-untyped", "name-defined", "redundant-cast", "unused-ignore", "type-arg"]

# ------------------------------
# PYRIGHT
# Strict by default (python_flow). Permissive executionEnvironment for elixir_flow.
# ------------------------------
[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "strict"
include = ["pipe_operator"]
exclude = ["**/__pycache__", ".venv", "build", "dist"]
extraPaths = ["."]
venvPath = "."
venv = ".venv"

[[tool.pyright.executionEnvironments]]
root = "pipe_operator/elixir_flow"
reportOperatorIssue = "none"
reportCallIssue = "none"
reportUndefinedVariable = "none"
reportGeneralTypeIssues = "none"
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportMissingTypeArgument = "none"
reportUntypedFunctionDecorator = "none"
reportUnknownLambdaType = "none"

# Tests use lambdas and dynamic patterns that strict mode flags. Permissive.
[[tool.pyright.executionEnvironments]]
root = "pipe_operator/python_flow/tests.py"
reportUnknownVariableType = "none"
reportUnknownLambdaType = "none"
reportUnknownArgumentType = "none"
reportOperatorIssue = "none"

[[tool.pyright.executionEnvironments]]
root = "pipe_operator/shared/tests"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownVariableType = "none"

# ------------------------------
# TY
# Strict by default. Inline `# ty: ignore[rule]` used in elixir_flow only.
# ------------------------------

# ------------------------------
# PYREFLY
# Strict by default. Inline `# pyrefly: ignore[rule]` used in elixir_flow only.
# ------------------------------
[tool.pyrefly]
project-excludes = ["**/__pycache__", ".venv", "build", "dist"]

# ------------------------------
# RUFF
# ------------------------------
[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"*/elixir_flow/tests/test_pipe.py" = ["F821"]

[tool.ruff.lint.isort]
known-first-party = ["pipe_operator"]
force-sort-within-sections = true

# ------------------------------
# COVERAGE
# ------------------------------
[tool.coverage.run]
omit = ["*/__init__.py", "*/tests/*", "*/tests.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
